src/language/tests/success/function.prez
void doNothing() {
  return;
}

int inc(int n) {
  return n + 1;
}

bool isEqual(int a, int b) {
  return a == b;
}

long manyParams(int a, bool b, int c, long d, int e, int f, int g, char h) {
  if (b) {
    return a + c + d + e + f + g + h;
  } else {
    return -1;
  }
}

void main() {
  doNothing();
  print(inc(0));

  int a = 4;
  int b = a;
  if (isEqual(a, b)) {
    print(2);
  }

  long d = 3;
  print(manyParams(1,true,2,d,4,5,6,'a'));
  g(4,5,fac(3));
}

int fac(int n) {
  if (n <= 1) {
    return 1;
  }

  return n * fac(n-1);
}

void g(int a, int b, int c) {
  print(a);
  print(b);
  print(c);
}
