src/language/tests/error/return.prez
int intFn() {
  return true;
}

void voidFn() {
  int a = 4;
  return a ^ 1;
}

bool boolFn() {
  bool b = true;
  bool c = false;
  return b || c;
}

int f() {}

short g(short n) {
  if (n == 1) {
    return n;
  } else {
    return n+1;
  }
}

long h(int n) {
  if (n == 1) {
    return n;
  }
}

char[] j() {
  while (true) {}
}
